--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,8 @@
 <header>
     <nav>
-    	<a href="{{ site.baseurl }}/"><h1>Mikhail Todes</h1></a>
+    	<a href="{{ site.baseurl }}/"><h1>Machine Learning Baseball Prediction</h1></a>
     	<ul>
     		<li><a href="{{ site.baseurl }}/">Home</a></li>
-    		<li><a href="{{ site.baseurl }}/about/">About</a></li>
-    		<li><a href="{{ site.baseurl }}/contact/">Contact</a></li>
     	</ul>
     </nav>
 </header>
