--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,8 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>{{ site.title }}</title>
-	<link rel="icon" type="image/png" href="{{ site.baseurl }}/public/images/head_icon.jpg">
+	<title>Baseball Predictions</title>
+	<link rel="icon" type="image/png" href="{{ site.baseurl }}/public/images/head_icon.png">
 
 	<link rel="stylesheet" href="{{ site.baseurl }}/public/stylesheets/style.css">
 
