--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>Baseball</title>
+	<title>Baseball Predictions</title>
 	<link rel="icon" type="image/png" href="{{ site.baseurl }}/public/images/head_icon.png">
 
 	<link rel="stylesheet" href="{{ site.baseurl }}/public/stylesheets/style.css">
