--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     	<a href="{{ site.baseurl }}/"><h1>Machine Learning Baseball Prediction</h1></a>
     	<ul>
     		<li><a href="{{ site.baseurl }}/">Home</a></li>
-		<li><a href="{{ site.baseurl }}/results/">Results</a></li>
+		<li><a href="{{ site.baseurl }}/Results/">Results</a></li>
     	</ul>
     </nav>
 </header>
