Adding the write up

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,8 @@
 <header>
     <nav>
-    	<a href="{{ site.baseurl }}/"><h1>Machine Learning Baseball Prediction</h1></a>
-    	<ul>
+      	<ul>
     		<li><a href="{{ site.baseurl }}/">Home</a></li>
-		<li><a href="{{ site.baseurl }}/results">Results</a></li>
+		<li><a href="{{ site.baseurl }}/report">Report</a></li>
     	</ul>
     </nav>
 </header>
