--- a/_layouts/report.html
+++ b/_layouts/report.html
@@ -3,9 +3,9 @@ layout: main
 ---
 <main class="result">
 	<section id="contact-content">
+	<br />
 		<img id="result-image" src="{{ page.image }}">
-		<h1 id="result-title">{{ page.title }}</h1>
-		<h2 id="result-date">{{ page.date |  date: '%B, %Y'}}</h2>
+		<h1 id="result-title" align="center">{{page.title}}</h1>
 
 		{{ content }}
 
