--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <ul>
-    	<li>EECS349<br>Machine Learning</li>
+    	<li>EECS349 - Spring 2016<br>Machine Learning</li>
         <li align="right">Northwestern University</li>    	
     </ul>
 </footer>
